--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
     "react-icons": "^3.10.0",
+    "react-paypal-button-v2": "^2.6.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-select": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
