--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
     "react-icons": "^3.11.0",
+    "react-infinite-scroll-component": "^5.0.5",
     "react-paypal-button-v2": "^2.6.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
