--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.0",
     "firebase": "^7.18.0",
     "history": "^5.0.0",
+    "jquery": "^3.6.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.1",
     "react-dom": "^16.13.1",
