--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-infinite-scroll-component": "^5.0.5",
     "react-paypal-button-v2": "^2.6.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.3",
     "react-select": "^3.1.0",
     "react-swipeable-views": "^0.13.9"
   },
