Add react Helmet

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.2.1",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
     "react-infinite-scroll-component": "^5.0.5",
     "react-paypal-button-v2": "^2.6.2",
